<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:id="@+id/lo_linear_layout"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
xmlns:android="http://schemas.android.com/apk/res/android"
>
<TextView
android:id="@+id/tv_enter_text"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="8px"
android:text="@string/enter_text"
>
</TextView>
<EditText
android:id="@+id/et_input_text"
android:layout_width="fill_parent"
android:layout_height="68px"
android:text="@string/predef_text"
android:textSize="18sp"
>
</EditText>

<CheckBox
android:id="@+id/cb_text"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/cb_text_dis"
>
</CheckBox>
<CheckBox
android:id="@+id/cb_ligth"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/cb_light_dis"
>
</CheckBox>

<CheckBox 
android:layout_width="fill_parent"
android:layout_height="wrap_content" 
android:id="@+id/cb_flash" 
android:text="@string/cb_light_flash"></CheckBox>

<CheckBox
android:id="@+id/cb_sound"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/cb_sound"
>
</CheckBox>

<CheckBox
android:layout_width="fill_parent"
android:layout_height="wrap_content" 
android:text="@string/cb_vibration"
android:id="@+id/cb_vibration">
</CheckBox>

<CheckBox android:id="@+id/cb_sms" 
android:text="@string/cb_sms"
android:layout_width="fill_parent"
android:layout_height="wrap_content"></CheckBox>

<LinearLayout
android:id="@+id/widget40"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
>

<Button
android:id="@+id/bt_start"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginTop="8px"
android:text="Start output!"
android:textSize="20sp"
android:textStyle="bold"
android:layout_gravity="center_horizontal"
>
</Button>
<Button
android:id="@+id/bt_settings"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="Settings"
android:textSize="12sp"
android:layout_gravity="right"
>
</Button>
</LinearLayout>




</LinearLayout>
